--- a/VenvDjango/django-drf-react-quickstart/project/requirements.txt
+++ b/VenvDjango/django-drf-react-quickstart/project/requirements.txt
@@ -18,6 +18,7 @@ django-environ==0.4.5
 django-filter==2.0.0
 django-tastypie==0.14.2
 djangorestframework==3.9.1
+gunicorn==19.9.0
 hiredis==0.3.1
 hyperlink==18.0.0
 idna==2.8
